Version 5.9.21
- Fixed loop test for downwards loops with steps > 1.
- Improved handling of two dimensional arrays in BASIC
- Improved handling of method pointers in Spin2
- Optimized ZEROX (thanks Ada)
- Optimize some "obvious" 64 bit shifts
- Restored generation of all public methods in spin2cpp C and C++ output

Version 5.9.20
- Added a new pass to re-calculate object sizes after symbol resolution (fixes some problems with memory overruns in C code used as Spin object)
- Added STRCOPY Spin2 function
- Fixed a crash when trivial C programs are submitted
- Fixed swapping 64 bit variables
- Fixed failure to change arrays to pointers in some C expressions
- Fixed 64 bit integer preincrement
- Fixed initializing local reference variables
- Fixed += and similar operators when used with references
- Implemented object constant overrides (object parameters) for Spin
- Implemented ... line continuation for Spin
- Inline assembly can now access multiple longs of large local variables.
- More fixes to C struct initialization
- Made debug output and C library output work better together
- Made repeat loops in Spin2 finish with the same value as in PNut
- Optimized initializers of large local variables
- Optimized long fills on P2 with SETQ (thanks to Ada Gottensträter again!)
- Remove unused methods even at -O0 optimization
- Relax type checking in C for pointer/integer conversion

Version 5.9.19
- Added a warning for mixing tabs and spaces in Spin code
- Added strtok() function to C library
- Fixed some incorrect C array declarations
- Fixed precision not being reset in printf
- Fixed incorrect leaf function analysis in Spin functions using floats
- Fixed lut function bug that crept in when memory was reserved at start of LUT
- Fixed padding while initializing structures
- Implemented -E and -H flags for nu bytecode
- Implemented SPR[] in bytecode (thanks to Ada Gottensträter)
- Improved register allocation in leaf functions (thanks Ada)