@@ -5,6 +5,7 @@ dat
 entry
 
 _demo
+	add	objptr, #4
 	rdlong	result1, objptr
 	add	result1, #4
 	wrlong	result1, objptr
@@ -12,7 +13,7 @@ _demo
 	rdlong	result1, objptr
 	add	result1, #3
 	wrlong	result1, objptr
-	sub	objptr, #4
+	sub	objptr, #8
 _demo_ret
 	ret
 
