@@ -1,5 +1,6 @@
 Version 5.9.21
 - Fixed loop test for downwards loops with steps > 1.
+- Fixed some problems with variable offsets in Spin
 - Improved handling of two dimensional arrays in BASIC
 - Improved handling of method pointers in Spin2
 - Optimized ZEROX (thanks Ada)
